egw_fw.css
/**
 * Stylite: jdots template
 *
 * @link http://www.stylite.de
 * @package jdots
 * @author Andreas Stöckel <as@stylite.de>
 * @author Ralf Becker <rb@stylite.de>
 * @author Nathan Gray <ng@stylite.de>
 * @version $Id: class.jdots_framework.inc.php 958 2010-06-02 09:32:26Z ralfbecker $
 */

body {
	margin: 0px !important;
	padding: 0px !important;
}

#egw_fw_basecontainer {
	width: 100%;
	height: 100%;
	font-family: Arial, Helvetica, Sans-Serif;
	font-size: 8pt;
	padding: 0px;
	margin: 0px;
}

#egw_fw_sidebar {
	float: left;
	padding: 4px;
	padding-top: 0px;
	width: 220px;
	height: 100%;
	position: fixed;
}

#divLogo {
	display: block;
	height: 42px;
	position: relative;
	text-align: center;
	padding-left: 5px;
	width: 220px;
	left: 0;
	top: 0;
}

#divLogo img {
	height: 48px;
	border: none;
}

#egw_fw_footer {
	position: fixed;
	bottom: 0px;
	width: 100%;
	text-align: center;
	padding: 3px;
	background-image:url(images/gradient22.png);
	background-position: bottom;
	clear: both;
	height: 10px;
}

#egw_fw_sidemenu {
	display: block;
	margin-top: 10px;
}

#egw_fw_topmenu {
	display: block;	
	text-align: right;
	padding-top: 0;
	padding-bottom: 5px;
	height: 13px;
	margin-left: 240px;
	background-image:url(images/gradient22.png);
	background-position: bottom;
	-webkit-border-bottom-left-radius: 10px;
	-moz-border-radius-bottomleft: 10px;
	border-bottom-left-radius: 10px;
}

#egw_fw_topmenu ul, #egw_fw_topmenu li, .topmenu_info_item, #egw_fw_topmenu_items, #egw_fw_topmenu_info_items {
	display: inline;
}
#egw_fw_topmenu_items ul {
	padding: 10px;
}
#egw_fw_topmenu_items {
	float: left;
	padding-top: 2px;
}

#egw_fw_topmenu li {
	background-image: url(images/bullet.png);
	background-repeat: no-repeat;
	background-position: left center;	
	padding-left: 12px;
	padding-right: 10px;
}

#egw_fw_topmenu_info_items select {
	margin-top: 0;
}
.topmenu_info_item {
	padding-left: 10px;
}

#egw_fw_topmenu a {
	text-decoration: none;
	color: black;
}

#egw_fw_main {

}

#egw_fw_tabs {
	margin: 5px 5px 5px 240px;	
}

.egw_fw_ui_sidemenu_entry_header {
	display: block;
	width: 210px;
	height: 20px;
	padding: 2px 5px 2px 5px;
	margin: 0px 5px 0px 5px;
	border-width: 0px 1px 0px 1px;
	border-style: solid;
	border-color: #c6ced6;
	cursor: pointer;
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	background-image:url(images/gradient30.png);
}

.egw_fw_ui_sidemenu_entry_header_active {
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px;
	border-radius: 0px;
	-moz-border-radius-topright: 5px;
	-webkit-border-top-right-radius:5px;
	-moz-border-radius-topleft: 5px;
	-webkit-border-top-left-radius:5px;
	border-top-right-radius: 5px;
	border-top-left-radius: 5px;
	border-width: 1px;
	background-image:url(images/gradient30blue.png);
	border-top: none;
	border-bottom: none;
}

.egw_fw_ui_sidemenu_entry_header:hover {
	background-color: RGB(230, 230, 255);
	background-image:url(images/gradient30blue.png);
/*	x-background-image:url(images/tabs_bg_hover.png);*/
}

.egw_fw_ui_sidemenu_entry_content {
	width: 218px;
	margin: 0px 5px 0px 5px;
	border-style: solid;
	border-color: #b4c5e6;
	border-width: 2px;
	background-image:url(images/gradient10blue.png);
	background-position: bottom;
	background-repeat: repeat-x;
	background-color: white;
	padding-bottom: 5px;
	-moz-border-radius-bottomright: 5px;
	-webkit-border-bottom-right-radius:5px;
	-moz-border-radius-bottomleft: 5px;
	-webkit-border-bottom-left-radius:5px;
	border-bottom-right-radius: 5px;
	border-bottom-left-radius: 5px;
}

.egw_fw_ui_sidemenu_entry_content_bottom {
	border-width: 0px 1px 1px 1px;
}

.egw_fw_ui_sidemenu_entry_header_bottom {
	border-width: 1px;
}


.egw_fw_ui_sidemenu_entry_icon {
	display: inline-block;
	width: 20px;
	height: 20px;
	padding-left: 0;
	padding-right: 10px;
	float: left;
}

.egw_fw_ui_ajaxloader {
	display: inline-block;
	width: 16px;
	height: 16px;
	background-image:url(images/ajax-loader.gif);
	background-repeat: no-repeat;
	background-position: center;
	float: right;
}

.egw_fw_ui_sidemenu_entry_header h1 {
	display: inline;
	font-size: 10pt;
}

.egw_fw_ui_tab_header {
	-moz-border-radius-topright:3px;
	-webkit-border-top-right-radius:3px;
	-moz-border-radius-topleft:3px;
	-webkit-border-top-left-radius:3px;
	border-top-right-radius:3px;
	border-top-left-radius:3px;
	background-color: RGB(230, 230, 230);
	display: inline-block;
	margin: 0px 5px 0px 0px;
	padding: 2px 10px 2px 10px;
	cursor: pointer;
	border-width: 1px;
	border-style: solid;
	border-color: #c6ced6;
	background-image:url(images/tabs_bg.png);
	background-repeat:repeat-x;
}

.egw_fw_ui_tab_header_hover{
	background-image:url(images/tabs_bg_hover.png);
}

.egw_fw_ui_tab_header h1{
	display: inline;
	font-size: 10pt;
	margin: 0;
}

.egw_fw_ui_tab_header_active {
	border-width: 1px 1px 0px 1px;
	padding: 2px 10px 3px 10px;
	background-color: white;
	background-image:none;
}

.egw_fw_ui_tab_content {
	border-style: solid;
	border-width: 0px 1px 1px 1px;
	border-color: #d5dde6;
	display: block;
	padding: 0px;
	background-color:white;
}

.egw_fw_ui_tab_icon {
	display: inline-block;
	width: 16px;
	height: 16px;
	margin-right: 5px;
	float: left;
}

.egw_fw_ui_tab_close_button {
	display: inline-block;
	width: 16px;
	height: 16px;
	margin-left: 5px;
	background-repeat: no-repeat;
	background-position: center;
	background-image: url(images/close_button.png);
	float: right;
}

.egw_fw_ui_tab_close_button:hover {
	background-image: url(images/close_button_hover.png);
}

.egw_fw_ui_tabs_header {
	-moz-border-radius-topright:5px;
	-webkit-border-top-right-radius:5px;
	-moz-border-radius-topleft:5px;
	-webkit-border-top-left-radius:5px;
	border-top-right-radius:5px;
	border-top-left-radius:5px;
	padding: 5px 5px 0px 5px;
	x-background-image:url(images/header_tabs_bg.png);
	background-image:url(images/gradient22.png);
	background-position: bottom;
	background-repeat:repeat-x;
}

.egw_fw_ui_category {
	margin: 0px;
	padding: 0px;
	color: RGB(0, 0, 0);
	cursor: pointer;
	background-image:url(images/gradient22.png);
}

.egw_fw_ui_category:hover {
	color: RGB(64, 64, 64);
}

.egw_fw_ui_category h1 {
	margin: 5px 0px 3px 5px;
	padding: 0px 0px 0px 15px;
	font-size: 9pt;
	background-image:url(images/arrow_left.png);
	background-repeat:no-repeat;
	background-position:left center;
}

/*.egw_fw_ui_category_arrow {
	display: inline-block;
	width: 8px;
	height: 8px;
	margin: 0px 5px 0px 5px;
	float: left;
}*/

.egw_fw_ui_category_active h1 {
	background-image:url(images/arrow_down.png);
}

.egw_fw_ui_category_content {
	margin-left: 2px;
	padding-top: 0px;
	padding-bottom: 5px;
}

.egw_fw_ui_sidemenu_listitem {
	display: block;
	padding-left: 16px;
	padding-right: 3px;
}

.egw_fw_ui_sidemenu_listitem_icon {	
	display: inline;
	margin-left: -16px;
	padding-right: 3px;
	width: 12px;
	height: 12px;
	float: left;
}

